--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -152,7 +152,7 @@ code. Even the browser's implementation can be simplified, by using
 the same mechanism to separate implementation of various effects
 within a browser.
 
-For an interesting example, condider three effects: shadows, bump
+For an interesting example, consider three effects: shadows, bump
 mapping, and lighting equations. Shadows provide an information that
 either turns on or off a particular lighting contribution (or scales
 this contribution, in case of soft shadows). Lighting equation
