--- a/shadow_maps_x3d/shadow_maps_x3d.tex
+++ b/shadow_maps_x3d/shadow_maps_x3d.tex
@@ -1072,7 +1072,7 @@ the \emph{results} of the shadow tests.
 %% , that is the results
 %% of \texttt{shadow2DProj} calls.
 A trivial implementation inside GLSL shader may be seen here:
-\myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi\_vrml\_test\_suite/x3d/shadow\_maps/shadow\_map\_pcf4.fs}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi_vrml_test_suite/shadow_maps/shadow_map_pcf4.fs}.
+\myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi\_vrml\_test\_suite/shadow\_maps/shadow\_map\_pcf4.fs}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/kambi_vrml_test_suite/shadow_maps/shadow_map_pcf4.fs}.
 %% A good hardware may also help here. Modern GPUs may
 %% internally filter at least four depth comparison results.
 
@@ -1220,7 +1220,7 @@ a lot of the improvements.
 The 3D scenery with trees and towers visible on many screenshots in this paper
 was constructed with the help of the assets from \myhref{http://opengameart.org}{http://opengameart.org},
 a great site with good quality 3D assets on clear open-source licenses.
-See the \myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/vrml\_engine\_doc/shadow\_maps\_x3d/sunny\_street/}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/papers/shadow_maps_x3d/sunny_street/}
+See the \myhref{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/papers/shadow\_maps\_x3d/sunny\_street/}{https://vrmlengine.svn.sourceforge.net/svnroot/vrmlengine/trunk/papers/shadow_maps_x3d/sunny_street/}
 for the full scene code in X3D, helper transformation program and the
 \texttt{README.txt} file with detailed credits.
 
