Add fresnel_and_toon screen.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8248 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -331,6 +331,12 @@ placing them both on Appearance.effects list. This also allows to
 define a library of effects, that can be composited without any work
 needed by user.
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=3in]{fresnel_and_toon}
+  \caption{Toon and fresnel effects combined.}
+\end{figure}
+
 \subsection{Plugging from other nodes}
 
 The real power of our system comes from the fact that some nodes,
